@@ -1,3 +1,1 @@
-<span> | (<em class="ktype">Callback</em>)
-  <strong>{normal}();</strong>
-</span>
+<span> | (<em class="ktype">Callback: {normal}();</em>)</span>
