@@ -2,6 +2,10 @@
 - Bugfix: Added LazyLoadingProxy->__toString() to the debug
   blacklist to prevent a fatal.
 - Change: Moved the configuration file to it's own folder.
+- Change: Made the callback display in both skins a little less
+  obtrusive
+- Change: Moved the callback analysis from the render class to
+  the more appropriate routing class.
 
 2.0.1
 - Refactored the configuration and introduced models there.
